--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <!-- 3. The Image (MUST be a full URL, not relative) -->
     <!-- We are using your existing uploaded image here -->
-    <meta property="og:image" content="https://www.anaiasholycommunion.in/lllll.png" />
+    <meta property="og:image" content="https://www.anaiasholycommunion.in/Social.png" />
     
     <!-- 4. The URL of your website -->
     <meta property="og:url" content="https://www.anaiasholycommunion.in" />
